--- a/style.css
+++ b/style.css
@@ -44,6 +44,33 @@ h2 {font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: left;
 }
 
+.popup-hidden {
+  display: none;
+  position: fixed;
+  z-index: 20;
+  left: 0; top: 0; width: 100%; height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 15px;
+  width: 300px;
+  text-align: center;
+  position: relative;
+}
+
+#close-popup {
+  position: absolute;
+  top: 10px; right: 15px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+
 canvas {
     box-shadow: 150px 150px 150px 150px #2403b8;
     border: 3px solid #ffffff;
